--- a/blog/templates/blogs/allblogs.html
+++ b/blog/templates/blogs/allblogs.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html lang="en">
   <head>
+    {% load staticfiles%}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v3.8.5">
-    <title>Album example · Bootstrap</title>
+    <title>Marius - Python</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
 
@@ -35,15 +36,15 @@
   <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Marius</a>
+            <a class="navbar-brand" href="{% url 'home'%}">Marius</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav ml-auto">
                 <a class="nav-item nav-link" href="#">Twitter</a>
-                <a class="nav-item nav-link" href="#">Resume</a>
-                <a class="nav-item nav-link active" href="#">Blog</a>
+                <a class="nav-item nav-link" href="{% static 'pythom_server_cheat_sheet.docx'%}">Resume</a>
+                <a class="nav-item nav-link active" href="{% url 'allblogs'%}">Blog</a>
                 
               </div>
             </div>
@@ -56,7 +57,7 @@
         <h2>Latest</h2>
         <hr/>
         {%for blogitem in blogs.all%}
-          <a href=''><h3>{{blogitem.title}}</h3></a>
+          <a href="{% url 'detail' blogitem.id%}"><h3>{{blogitem.title}}</h3></a>
           {{blogitem.pub_date_pretty}}
           <img class="img-fluid" src='{{blogitem.image.url}}' height="150px"/>
           {{blogitem.summary}}
